tests/derive_errors/struct/unit.stderr
error: jtd-derive does not support unit structs
 --> tests/derive_errors/struct/unit.rs:2:8
  |
2 | struct Unit;
  |        ^^^^
