tests/derive_errors/struct/unit.rs
#[derive(jtd_derive::JsonTypedef)]
struct Unit;

fn main() {}
